--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,18 @@
-title: Hello, world! I'm David Freeman
+title: Hello, this is my blog
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is the blog of Gurjot Singh Suri, an undergraduate at IIT Kharagpur, India
 permalink: ':title/'
-baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
+baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: David Freeman # add your name
-author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+author: Gurjot Singh Suri # add your name
+author-img: gurjot.jpg # add your photo
+about-author: I am an undergraduate student at IIT Kharagpur. I love exploring new technologies. # add description
 social-twitter: # add your Twitter handle
-social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
+social-facebook: gurjotsingh.suri.9 # add your Facebook handle
+social-github: gurjot273 # add your Github handle
 social-linkedin: # add your Linkedin handle
 social-email: # add your Email address
 
